--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ go:
 install:
   - export PATH=$PATH:$HOME/gopath/bin
   - go get -u github.com/go-ego/gse  
-  - go get -u github.com/go-ego/gpy  
+  - go get -u github.com/go-ego/gpy 
+  - go get -u github.com/go-ego/murmur 
   - go get -v -t
 
 # notifications:
