--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - go get -u github.com/go-ego/gse  
   - go get -u github.com/go-ego/gpy 
   - go get -u github.com/go-ego/murmur 
+  - go get -u github.com/shirou/gopsutil
   - go get -v -t
 
 # notifications:
