--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ install:
   - go get -u github.com/shirou/gopsutil
   - go get -v -t
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+  
 # notifications:
 #   email:
 #     - .com
