--- a/circle.yml
+++ b/circle.yml
@@ -1,37 +1,31 @@
 # circle.yml #
 # machine:
 #   go:
-#     version: 1.8.1
+#     version: 1.9.1
 
-machine:
-  environment:
-    GODIST: "go1.8.3.linux-amd64.tar.gz"
-  post:
-    - mkdir -p download
-    - test -e download/$GODIST || curl -o download/$GODIST https://storage.googleapis.com/golang/$GODIST
-    - sudo rm -rf /usr/local/go
-    - sudo tar -C /usr/local -xzf download/$GODIST
+version: 2
 
-# customize dependencies
-# dependencies:
-#   pre:
-#     - sudo apt-get update
-#     - sudo apt-get install libx11-dev
-dependencies:
-  override:
-    # './...' is a relative pattern which means all subdirectories
-    - go get -u github.com/go-ego/gse  
-    - go get -u github.com/go-ego/gpy 
-    - go get -u github.com/go-ego/murmur 
-    - go get -u golang.org/x/sys/unix
-    - go get -u github.com/shirou/gopsutil
-    - go get -t -d -v ./...
+jobs:
+  build:
+    docker:
+      - image: golang:1.9.1
+    working_directory: /go/src/github.com/go-ego/riot
+    steps:
+      - checkout
+      # specify any bash command here prefixed with `run: `
+      - run: go get -u github.com/go-ego/gse  
+      - run: go get -u github.com/go-ego/gpy 
+      - run: go get -u github.com/go-ego/murmur 
+      - run: go get -u golang.org/x/sys/unix
+      - run: go get -u github.com/shirou/gopsutil
+      - run: go get -v -t -d ./...
+      - run: go test -v ./...   
 
 # script:
 #   - ./go.test.sh
 
-test:
-  post:
-    - go test -v -covermode=count -coverprofile=coverage.out
-    - bash <(curl -s https://codecov.io/bash) 
+# test:
+#   post:
+#     - go test -v -covermode=count -coverprofile=coverage.out
+#     - bash <(curl -s https://codecov.io/bash) 
    
