--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,10 @@ jobs:
       - run: go get -u golang.org/x/sys/unix
       - run: go get -u github.com/shirou/gopsutil
       - run: go get -v -t -d ./...
-      - run: go test -v ./...   
+      - run: go test -v ./... 
+       # codecov.io
+      - run: go test -v -covermode=count -coverprofile=coverage.out
+      - run: bash <(curl -s https://codecov.io/bash)   
 
 # script:
 #   - ./go.test.sh
