--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ data/riot/riot
 data/riot/index
 data/riot1/index
 data/riot1/riot1
+data/riot1/heartb/heartb
 data/client/client
 examples/pinyin/pinyin
 examples/pinyin/index
